# mcap-to-mp4

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.chglog/: config.yml
.github/: dependabot.yml
.github/scripts/: update_changelog.sh  update_version.sh
.github/workflows/: bump-version.yaml  lint-python.yaml  publish-pypi.yaml  pytest.yaml
mcap_to_mp4/: __init__.py  cli.py
tests/: README.md  test_cli.py  test_e2e.py
