[tool.poetry]
name = "mcap-to-mp4"
version = "0.3.0"
description = "A tool to convert ROS topics recored with mcap to MP4 file"
authors = ["Daisuke Sato"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/Tiryoh/mcap-to-mp4"

[tool.poetry.dependencies]
python = "^3.10"
mcap = "^1.1.1"
mcap-ros2-support = "^0.5.3"
poetry = ">=1.8,<3.0"
pillow = ">=10.2,<12.0"
numpy = ">=1.26.4,<3.0.0"
imageio = {extras = ["ffmpeg"], version = "^2.34.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-isort = "^6.1.1"
flake8-unused-arguments = "^0.0.13"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-github-actions-annotate-failures = ">=0.2,<0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcap-to-mp4 = "mcap_to_mp4.cli:main"
