[project]
name = "mcap-to-mp4"
version = "0.4.0"
description = "A tool to convert ROS topics recorded with mcap to MP4 file"
authors = [
    {name = "Daisuke Sato"},
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcap>=1.1.1,<2.0.0",
    "mcap-ros2-support>=0.5.3,<0.6.0",
    "pillow>=10.2,<12.0",
    "numpy>=1.26.4,<3.0.0",
    "imageio[ffmpeg]>=2.34.0,<3.0.0",
]

[project.urls]
Repository = "https://github.com/Tiryoh/mcap-to-mp4"

[project.scripts]
mcap-to-mp4 = "mcap_to_mp4.cli:main"

[dependency-groups]
dev = [
    "flake8>=7.1.1,<8.0.0",
    "flake8-isort>=6.1.1,<7.0.0",
    "flake8-unused-arguments>=0.0.13,<0.1.0",
    "mypy>=1.14.1,<2.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-github-actions-annotate-failures>=0.2,<0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
